--- a/index.html
+++ b/index.html
@@ -10,6 +10,11 @@
         <button onclick="startGame()">START GAME</button>
         <button onclick="newCard()">NEW CARD</button>
         <p id="player-el"></p>
+        <p>Rules of the Game</p>
+        <p>Clicking the Start Game buttons gives you 2 cards</p>
+        <p>If the sum of the 2 cards equal 22, you have Blackjack!😄</p>
+        <p>If the sum of the first cards is less than 22, you are asked to pick another card</p>
+        <p>If you pick card number 3 and the total is above 22, then you are out of the game😭</p>
         <script src="index.js"></script>
     </body>
 </html>
