--- a/index.html
+++ b/index.html
@@ -12,9 +12,11 @@
         <p id="player-el"></p>
         <p>Rules of the Game</p>
         <p>Clicking the Start Game buttons gives you 2 cards</p>
-        <p>If the sum of the 2 cards equal 22, you have Blackjack!😄</p>
-        <p>If the sum of the first cards is less than 22, you are asked to pick another card</p>
-        <p>If you pick card number 3 and the total is above 22, then you are out of the game😭</p>
+        <p>If the sum of the 2 cards equal 21, you have Blackjack!😄</p>
+        <p>If the sum of the first 2 cards is less than 21, you are asked to pick another card</p>
+        <p>If you pick card number 3 and the total is above 21, then you are out of the game😭</p>
+        <p>If the sum of the first 2 cards is above 21, you are also out of the game 😭</p>
+        <h2>Good Luck!</h2>
         <script src="index.js"></script>
     </body>
 </html>
